# Practical_Week_4

./: CMakeLists.txt  README.md
Practical_Week_4/: CMakeLists.txt  Practical_Week_4.cpp  Practical_Week_4.h
enc_temp_folder/4488afce53f631e8cea12cfeedeb4870/: Practical_Week_4.cpp
